[project]
name = "fw2odf"
version = "0.1a1"
description = "FinalWriter (Amiga word processor) to Open Document Format conversion"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
  {name = "Charles Horn", email = "charles.horn@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">3.7,<3.13"

dependencies = [
  "odfpy >= 1.4"
]

[project.scripts]
fw2odf = "fw2odf.cli:main"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
